learn/Jumpserver/yaml/jms_configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jms
